appId: com.duckduckgo.mobile.android
name: "ReleaseTest: Sync can create an account"
tags:
  - syncTest
---
- launchApp:
    clearState: true
    stopApp: true
- runFlow: ../shared/onboarding.yaml
- runFlow: ../shared/open_sync_screen.yaml
- tapOn: "Sync and Back Up This Device"
- tapOn: "Turn on Sync & Backup"
- extendedWaitUntil:
    visible:
      id: "com.duckduckgo.mobile.android:id/footer_next_button"
      enabled: true
    timeout: 5000
- tapOn: "Next"
- tapOn: "Done"
- assertVisible:
    id: "com.duckduckgo.mobile.android:id/qrCodeImageView"