appId: com.duckduckgo.mobile.android
name: "ReleaseTest: Sync can login into created account"
tags:
  - syncTest
---
- launchApp:
    clearState: true
    stopApp: true
- runFlow: ../sync_flows/1_-_create_account.yaml
- tapOn:
    id: "com.duckduckgo.mobile.android:id/item_container"
    index: 2
- tapOn:
    id: "com.duckduckgo.mobile.android:id/item_container"
- tapOn: "Navigate up"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/item_container"
    index: 0
- tapOn:
    id: "com.duckduckgo.mobile.android:id/textAlertDialogPositiveButton"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/item_container"
    index: 1
- tapOn:
    id: "com.duckduckgo.mobile.android:id/item_container"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/footer_primary_button"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/footer_next_button"
- assertVisible:
    id: "com.duckduckgo.mobile.android:id/qrCodeImageView"