appId: com.duckduckgo.mobile.android
name: "Sync Critical Path: Account can be recovered"
tags:
  - syncCriticalPathTest
---
- launchApp:
    clearState: true
    stopApp: true
- runFlow: ../shared/onboarding.yaml
- runFlow: ../shared/open_sync_dev_settings_screen.yaml
- tapOn:
    id: "com.duckduckgo.mobile.android:id/trailingSwitch"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/internal_edit_text"
- inputText: ${CODE}
- tapOn:
    id: "com.duckduckgo.mobile.android:id/sync_recovery_code_cta"
- tapOn: "Navigate up"
- scrollUntilVisible:
    element:
      text: "Sync & Backup"
    direction: UP
- tapOn: "Sync & Backup"
- assertVisible:
    id: "com.duckduckgo.mobile.android:id/qrCodeImageView"