appId: com.duckduckgo.mobile.android
name: "ReleaseTest: Sync can recover a created account"
tags:
  - syncCriticalPathTest
---
- launchApp:
    clearState: true
    stopApp: true
- runFlow: ../sync_flows/e2e_add_new_device.yaml
- runScript: bookmark_domains.js
# Until here we've joined an account that has predefined data
# Now, we add a couple bookmarks and folders
- tapOn: "Search or type URL"
- inputText: "${output.bookmarks.domains[0]}"
- tapOn: "High Five!"
- tapOn: "Browser menu"
- tapOn: "Add Bookmark"
- runFlow: ../shared/open_bookmarks.yaml
# Delete all bookmarks
# Recover account
# New bookmark should be present