# This test uses an input generated by a Github Action. The action creates an account with predefined data
# Expected state: Test start
appId: com.duckduckgo.mobile.android
name: "Sync Critical Path: Devices can be added to an existing account"
---
- launchApp:
    clearState: true
    stopApp: true
- runFlow: ../../shared/pre_onboarding.yaml
- runFlow: ../../shared/open_sync_dev_settings_screen.yaml
- tapOn:
    id: "com.duckduckgo.mobile.android:id/trailingSwitch"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/internal_edit_text"
- inputText: ${CODE}
- tapOn:
    id: "com.duckduckgo.mobile.android:id/sync_recovery_code_cta"
- tapOn: "Navigate up"
- scrollUntilVisible:
    element:
      text: "Sync & Backup"
    direction: UP
- tapOn: "Sync & Backup"
- assertVisible: "Synced Devices"
- tapOn: "Navigate up"
- tapOn: "Navigate up"