# Expected state: Sync Settings screen
appId: com.duckduckgo.mobile.android
---
- tapOn: "Recover Synced Data"
- tapOn: "Get Started"
- tapOn: "Or Manually Enter Code"
- tapOn: "Paste Code"
- extendedWaitUntil:
    visible:
      id: "com.duckduckgo.mobile.android:id/footer_next_button"
      enabled: true
    timeout: 5000
- tapOn: "Next"
- tapOn: "Done"
- assertVisible: "Synced Devices"