appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "ReleaseTest: Multiple tabs can be opened"
tags:
    - releaseTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                  clearState: true
                  stopApp: true

            - runFlow: ../shared/skip_all_onboarding.yaml

            - tapOn:
                id: "omnibarTextInput|inputField"
            - inputText: "https://privacy-test-pages.site"
            - pressKey: Enter
            - runFlow: ../shared/browser_screen/click_on_tabs_button.yaml
            - assertVisible:
                text: "0 trackers blocked in the last 7 days"
            - assertVisible:
                text: "Privacy Test Pages - Home"
            - tapOn: "New Tab"
            - assertVisible:
                id: "inputModeWidget|omnibarTextInput"
            - inputText: "https://www.search-company.site"
            - pressKey: Enter
            - assertVisible:
                text: "Search engine"
            - runFlow: ../shared/browser_screen/click_on_tabs_button.yaml
            - assertVisible:
                text: "Ad Click Flow"
            - assertVisible:
                text: "Privacy Test Pages - Home"
            - tapOn:
                text: "Privacy Test Pages - Home"
            - assertNotVisible:
                text: "Ad Click Flow"
            - assertVisible:
                text: "Privacy Test Pages - Home"
            - runFlow: ../shared/browser_screen/click_on_tabs_button.yaml
            - assertVisible:
                text: "Ad Click Flow"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/close"
                rightOf: "Ad Click Flow"
            - assertNotVisible:
                text: "Ad Click Flow"
